--- a/html/homepage.html
+++ b/html/homepage.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="../js/homepage.js" defer></script>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Welcome</title>
 </head>
 <body>
-
+<input type="text" id="name" placeholder="Name">
+<button id="name-submit">Submit</button>
 </body>
 </html>
