--- a/html/homepage.html
+++ b/html/homepage.html
@@ -8,5 +8,6 @@
 <body>
 <input type="text" id="name" placeholder="Name">
 <button id="name-submit">Submit</button>
+<h3>{{.Greeting}}! </h3>
 </body>
 </html>
